--- a/package.json
+++ b/package.json
@@ -1,30 +1,38 @@
 {
-  "name": "eslint-plugin-c-3po",
-  "version": "0.0.0",
+  "name": "eslint-plugin-ttag",
+  "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "index.js",
   "directories": {
+    "doc": "docs",
+    "lib": "lib",
+    "test": "tests"
   },
   "scripts": {
-    "test": "mocha tests --recursive",
+    "test": "jest tests",
     "build": "babel lib --out-dir dist",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "preversion": "npm run test"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "babel-jest": "^28.0.2",
+    "eslint": "^8.14.0",
+    "jest": "^28.0.2"
+  },
+  "peerDependencies": {
+    "eslint": ">=2.x"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/c-3po-org/eslint-plugin-c-3po.git"
+    "url": "git+https://github.com/ttag-org/eslint-plugin-ttag.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/c-3po-org/eslint-plugin-c-3po/issues"
+    "url": "https://github.com/ttag-org/eslint-plugin-ttag/issues"
   },
-  "homepage": "https://github.com/c-3po-org/eslint-plugin-c-3po#readme",
-  "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-preset-es2015": "^6.22.0",
-    "eslint": "^3.16.1",
-    "mocha": "3.2.0"
-  }
+  "homepage": "https://github.com/ttag-org/eslint-plugin-ttag#readme"
 }
