--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
   "presets": [
-      ["@babel/preset-env", {"targets": {"node": true }}]
+      ["@babel/preset-env", {"targets": {"node": "12" }}]
   ]
 }
